...
        okButton.accessibilityIdentifier = Accessibility.okButton.rawValue
    }
}

extension LoginViewController {
    private enum Accessibility: String {
        case welcomeText              = "accessibility.id.welcomeText"
        case userNameTextField        = "accessibility.id.userNameTextField"
        case passwordTextField        = "accessibility.id.passwordTextField"
        case okButton                 = "accessibility.id.ok"
    }
}

